--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,11 +12,15 @@
 @import './components/header-nav';
 @import './components/header-contacts';
 @import './components/hero';
-@import './components/hero-btn';
+@import './components/btn';
+@import './components/filters';
+@import './components/backdrop';
 @import './components/modal';
 @import './components/features';
+@import './components/title';
 @import './components/examples';
 @import './components/employees';
+@import './components/socials';
 @import './components/clients';
 @import './components/footer';
 @import './components/footer-form';
