--- a/sass/components/_employees.scss
+++ b/sass/components/_employees.scss
@@ -1,79 +1,47 @@
 .employees {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    background-color: rgba(245, 244, 250, 1);
-  }
-  
-  .employees-list {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: rgba(245, 244, 250, 1);
+
+  &__list {
     display: flex;
   }
-  
-  .employees-item:not(:last-child) {
-    margin-right: 30px;
-  }
-  
-  .employees-item {
+
+  &__item {
     background-color: #ffffff;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     padding-bottom: 30px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
-  
-  .employee-pic {
+
+  &__pic {
     margin-bottom: 30px;
   }
-  
-  .employee-name {
+
+  &__name {
     margin-top: 0;
     margin-bottom: 10px;
-  
+
     color: var(--title-text-color);
-  
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
   }
-  
-  .employee-position {
+
+  &__position {
     margin-top: 0;
     margin-bottom: 16px;
-  
+
     font-size: 16px;
     line-height: 1.18;
-  
+
     text-align: center;
   }
-  
-  .socials {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .socials-item:not(:last-child) {
-    margin-right: 10px;
-  }
-  
-  .socials-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    width: 44px;
-    height: 44px;
-  
-    border-radius: 50%;
-    fill: #afb1b8;
-  
-    transition: fill 250ms cubic-bezier(var(--cubic-bz)),
-      background-color 250ms cubic-bezier(var(--cubic-bz));
-  }
-  
-  .socials-link:hover,
-  .socials-link:focus {
-    background-color: var(--accent-color);
-    fill: var(--primary-white-color);
-    outline: transparent;
-  }
-  
+}
