--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,49 +1,35 @@
 .examples {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-  
-  .work-examples {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  &__list {
     display: flex;
     justify-content: space-between;
   }
-  
-  .clients-title,
-  .examples-title,
-  .employees-title {
-    margin-top: 0;
-    margin-bottom: 50px;
-    color: var(--title-text-color);
-  
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-  
-    text-align: center;
-  }
-  
-  .examples-item {
+
+  &__item {
     position: relative;
     z-index: 1;
   }
-  
-  .examples-text {
+
+  &__text {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-  
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-  
+
     color: var(--primary-white-color);
     background-color: rgba(47, 48, 58, 0.8);
-  
+
     padding-top: 27px;
     padding-bottom: 27px;
     margin: 0;
   }
+}
