--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,45 +1,45 @@
 .features {
-    padding-top: 94px;
-  }
-  
-  .feature-list {
+  padding-top: 94px;
+
+  &__list {
     display: flex;
     justify-content: space-between;
   }
-  
-  .feature-thumb {
+
+  &__item {
+    width: 270px;
+  }
+
+  &__thumb {
     display: flex;
     justify-content: center;
     align-items: center;
-  
+
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
-  
+
     border-radius: 4px;
     background-color: var(--secondary-bg-color);
   }
-  
-  .feature-item {
-    width: 270px;
-  }
-  
-  .feature-title {
+
+  &__title {
     margin-top: 0;
     margin-bottom: 10px;
     color: var(--title-text-color);
-  
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-  
+
     text-transform: uppercase;
   }
-  
-  .feature-text {
+
+  &__text {
     margin-top: 0;
     margin-bottom: 0;
-  
+
     font-size: 14px;
     line-height: 1.71;
   }
+}
