--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,42 +1,42 @@
-.form-subscribe {
-    display: flex;
-    margin-left: auto;
-  }
-  
-  .form-label {
+.subscribe {
+  display: flex;
+  margin-left: auto;
+
+  &__label {
     display: flex;
     flex-direction: column;
     margin-right: 12px;
   }
-  
-  .subscribe-input {
+
+  &__input {
     width: 358px;
     height: 50px;
-  
+
     padding-left: 16px;
-  
+
     font-size: 16px;
     line-height: 1.25;
     color: rgba(255, 255, 255, 0.6);
-  
+
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: transparent;
     outline: 1px solid transparent;
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.6);
+      font-size: 16px;
+      line-height: 1.25;
+    }
   }
-  
-  .subscribe-input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 16px;
-    line-height: 1.25;
-  }
-  
-  .subscribe-btn {
+
+  &__btn {
     display: flex;
     align-self: flex-end;
   }
-  
-  .subscribe-icon {
+
+  &__icon {
     margin-left: 10px;
     fill: currentColor;
   }
+}
