--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -1,45 +1,45 @@
-.contacts-container {
+.contacts {
+  display: flex;
+  align-items: center;
+
+  &__container {
     margin-left: auto;
   }
-  
-  .contacts {
-    display: flex;
-    align-items: center;
-  }
-  
-  .contacts-item:not(:first-child) {
+
+  &__item:not(:first-child) {
     margin-left: 50px;
   }
-  
-  .contacts-icon {
-    margin-right: 10px;
-  }
-  
-  .link-email {
-    display: flex;
-    align-items: baseline;
-  }
-  
-  .link-tel {
-    display: flex;
-    align-items: center;
-  }
-  
-   .contacts-link {
+
+  &__link {
     color: var(--primary-text-color);
     fill: currentColor;
     text-decoration: none;
-  
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-  
+
     transition: color 250ms cubic-bezier(var(--cubic-bz));
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+      outline: transparent;
+    }
+
+    &--email {
+      display: flex;
+      align-items: baseline;
+    }
+
+    &--tel {
+      display: flex;
+      align-items: center;
+    }
+
+    &-icon {
+      margin-right: 10px;
+    }
   }
-  
-  .contacts-link:hover,
-  .contacts-link:focus {
-    color: var(--accent-color);
-    outline: transparent;
-  }
+}
