--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -1,72 +1,69 @@
 .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-  }
-  
-  .nav-header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+
+  &__line {
     border-bottom: 1px solid rgba(236, 236, 236, 1);
   }
-  
-  .main-nav {
+
+  &__container {
     display: flex;
     align-items: center;
   }
-  
-  .navigation {
+
+  &__nav {
     display: flex;
     align-items: center;
   }
-  
-  .site-nav {
+
+  &__nav-list {
     display: flex;
     align-items: center;
     margin-left: 93px;
   }
-  
-  .nav-item {
+
+  &__nav-item {
     position: relative;
 
     &:not(:first-child) {
       margin-left: 50px;
     }
-    
   }
-  
-   .nav-link {
+
+  &__nav-link {
     color: var(--title-text-color);
     text-decoration: none;
-  
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-  
+
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(var(--cubic-bz));
 
     &:hover,
     &:focus {
-    color: var(--accent-color);
-    outline: transparent;
-  }
-
-    &.current {
       color: var(--accent-color);
+      outline: transparent;
     }
 
-    &.current::after {
-      content: '';
-    
-      position: absolute;
-      bottom: -31px;
-    
-      width: 100%;
-      height: 4px;
-      background: var(--accent-color);
-      border-radius: 2px;
-      display: block;
-    }
+    &--current {
+      color: var(--accent-color);
 
+      &::after {
+        content: '';
+
+        position: absolute;
+        bottom: -31px;
+
+        width: 100%;
+        height: 4px;
+        background: var(--accent-color);
+        border-radius: 2px;
+        display: block;
+      }
+    }
   }
-  
+}
