--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,15 +1,26 @@
 .logo {
     font-family: Raleway, sans-serif;
-    color: var(--title-text-color);
+    color: var(--accent-color);
+    
     text-decoration: none;
   
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
 
-    &-title {
-      color: var(--accent-color);
+    &__title--white {
+      color: var(--primary-white-color)
+    }
+
+    &__title--black {
+      color: var(--title-text-color);
+    }
+
+    &__footer {
+      display: inline-block;
+      margin-bottom: 20px;
     }
   }
+  
   
   
