--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,106 +1,78 @@
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    z-index: 2;
-  
-    width: 100vw;
-    height: 100vh;
-  
-    background-color: rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    transform: translateX(-50%);
-    transition: opacity 250ms cubic-bezier(var(--cubic-bz)),
-      visibility 250ms cubic-bezier(var(--cubic-bz));
-  }
-  
-  .backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-  }
-  
-  .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.5);
-  }
-  
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  
-    min-width: 530px;
-    min-height: 580px;
-    padding: 40px;
-  
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-  
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform 250ms cubic-bezier(var(--cubic-bz));
-  }
-  
-  .close-modal-btn {
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  min-width: 530px;
+  min-height: 580px;
+  padding: 40px;
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(var(--cubic-bz));
+
+  &__btn--close {
     position: absolute;
     top: 8px;
     right: 8px;
-  
+
     display: flex;
     justify-content: center;
     align-items: center;
-  
+
     width: 30px;
     height: 30px;
-  
+
     fill: #000000;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--primary-white-color);
     cursor: pointer;
     transition: fill 250ms cubic-bezier(var(--cubic-bz));
+
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
   }
-  
-  .close-modal-btn:hover,
-  .close-modal-btn:focus {
-    fill: var(--accent-color);
-  }
-  
+
   /* Modal form */
-  
-  .modal-form-title {
+
+  &__title {
     display: inline-block;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
     text-align: center;
     color: var(--title-text-color);
-  
+
     margin-bottom: 12px;
   }
-  
-  .modal-form {
-    /* outline: 1px solid tomato; */
+
+  &__list {
     margin-right: auto;
     margin-left: auto;
   }
-  
-  .modal-form-field {
+
+  &__field {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
   }
-  
-  .modal-form-label {
+
+  &__label {
     margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--primary-text-color);
   }
-  
-  .modal-form-input {
+
+  &__input {
     height: 40px;
     width: 100%;
     margin: 0;
@@ -110,28 +82,28 @@
     fill: var(--title-text-color);
     outline: transparent;
     transition: border-color 250ms cubic-bezier(var(--cubic-bz)),
-    fill 250ms cubic-bezier(var(--cubic-bz));
+      fill 250ms cubic-bezier(var(--cubic-bz));
+
+    &:focus {
+      border-color: var(--accent-color);
+    }
+
+    &:focus + .modal__icon {
+      fill: var(--accent-color);
+    }
   }
-  
-  .modal-form-input:focus {
-    border-color: var(--accent-color);
-  }
-  
-  .modal-form-input:focus + .modal-icon {
-    fill: var(--accent-color);
-  }
-  
-  .input-wrap {
+
+  &__wrap {
     position: relative;
   }
-  
-  .modal-icon {
+
+  &__icon {
     position: absolute;
     left: 15px;
     top: 14px;
   }
-  
-  .modal-textarea {
+
+  &__textarea {
     height: 120px;
     width: 100%;
     padding: 12px 16px;
@@ -139,20 +111,20 @@
     border-radius: 4px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(var(--cubic-bz));
+
+    &:focus {
+      border-color: var(--accent-color);
+    }
+
+    &::placeholder {
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.01em;
+      color: rgba(117, 117, 117, 0.5);
+    }
   }
-  
-  .modal-textarea:focus {
-    border-color: var(--accent-color);
-  }
-  
-  .modal-textarea::placeholder {
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
-  }
-  
-  .submit-checkbox {
+
+  &__checkbox {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -160,33 +132,34 @@
     line-height: 1.71;
     margin-bottom: 30px;
   }
-  
-  .agreement-checkbox {
+
+  &__agreement-checkbox {
     display: flex;
     align-items: center;
     justify-content: center;
-  
+
     width: 16px;
     height: 15px;
     border: 1px solid var(--title-text-color);
     border-radius: 2px;
     margin-right: 7px;
     transition: background-color 250ms cubic-bezier(var(--cubic-bz)),
-    border-color 250ms cubic-bezier(var(--cubic-bz));
+      border-color 250ms cubic-bezier(var(--cubic-bz));
+
+    .input__checkbox:checked + & {
+      background-color: var(--accent-color);
+      border-color: var(--accent-color);
+    }
   }
-  
-  .input-checkbox:checked + .agreement-checkbox {
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-  }
-  
-  .agreement-link {
+
+  &__link {
     color: var(--accent-color);
     margin-left: 5px;
   }
-  
-  .modal-form-btn:hover,
-  .modal-form-button:focus {
+
+  &__btn:hover,
+  &__btn:focus {
     background-color: #188ce8;
     color: var(--primary-white-color);
   }
+}
