--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,129 +1,86 @@
 .portfolio {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-  
-  /*--------- Filters of the main content ---------*/
-  
-  .portfolio-filters {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  &__list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
   }
-  
-  .filters-item:not(:last-child) {
-    margin-right: 8px;
+
+  &__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
   }
-  
-  .filters-tab {
-    background-color: #f5f4fa;
-    color: var(--title-text-color);
-  
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-  
-    padding: 6px 22px;
-    border-radius: 4px;
-    border-color: transparent;
-    cursor: pointer;
-  
-    transition: background-color 250ms cubic-bezier(var(--cubic-bz)),
-      color 250ms cubic-bezier(var(--cubic-bz)), box-shadow 250ms cubic-bezier(var(--cubic-bz));
+
+  &__item:not(:nth-child(3n + 3)) {
+    margin-right: 30px;
   }
-  
-  .filters-tab:hover,
-  .filters-tab:focus {
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    outline: transparent;
+
+  &__item:hover,
+  &__item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  
-  /*--------- Main content ---------*/
-  
-  
-  .portfolio-overlay-thumb {
+
+  &__overlay-thumb {
     position: relative;
-  
+
     width: 370px;
     height: 294px;
     overflow: hidden;
   }
-  
-  .portfolio-overlay {
+
+  &__overlay {
     position: absolute;
     top: 0;
     left: 0;
-  
+
     width: 100%;
     height: 100%;
-  
+
     margin: 0;
     padding: 63px 24px;
-  
+
     background-color: rgba(33, 150, 243, 0.9);
     font-size: 18px;
     line-height: 1.55;
     color: var(--primary-white-color);
-  
+
     transform: translatey(100%);
     transition: box-shadow 250ms cubic-bezier(var(--cubic-bz)),
       transform 250ms cubic-bezier(var(--cubic-bz));
   }
-  
-  .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .portfolio-item:not(:nth-child(3n + 3)) {
-    margin-right: 30px;
-  }
-  
-  .portfolio-item:hover,
-  .portfolio-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-  
-  .portfolio-item:hover .portfolio-overlay,
-  .portfolio-item:focus .portfolio-overlay {
+
+  &__link:hover &__overlay,
+  &__link:focus &__overlay {
     transform: translatey(0%);
   }
-  
-  .portfolio-item:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-  }
-  
-  .portfolio-link {
+
+  &__link {
     text-decoration: none;
   }
-  
-  .portfolio-title {
+
+  &__title {
     margin-top: 0;
     margin-bottom: 4px;
-  
+
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--title-text-color);
   }
-  
-  .portfolio-text {
+
+  &__text {
     margin-top: 0;
     margin-bottom: 0;
-  
+
     font-size: 16px;
     line-height: 1.87;
     color: var(--primary-text-color);
   }
-  
-  .portfolio-wrap {
+
+  &__wrap {
     border: 1px solid rgba(238, 238, 238, 1);
     padding: 20px 24px;
   }
+}
