--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,20 +9,25 @@
 
 //Components 
 @import './components/logo';
-@import './components/header-nav';
-@import './components/header-contacts';
+@import './components/header';
+@import './components/navigation';
+@import './components/contacts';
 @import './components/hero';
 @import './components/btn';
+@import './components/advantagies';
 @import './components/filters';
 @import './components/backdrop';
 @import './components/modal';
 @import './components/features';
 @import './components/title';
+@import './components/section';
 @import './components/examples';
-@import './components/employees';
+@import './components/employees-section';
+@import './components/team-list';
 @import './components/socials';
-@import './components/clients';
+@import './components/clients-list';
 @import './components/footer';
+@import './components/address';
 @import './components/footer-form';
 @import './components/portfolio';
 
